# manipulation_project

./: README.md
moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/launch/: pick_and_place.launch.py
moveit2_scripts/src/: pick_and_place.cpp  pick_and_place_real.cpp  pick_and_place_sim.cpp
